--- a/package.json
+++ b/package.json
@@ -15,5 +15,18 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
     "vite": "^5.0.0"
-  }
+  },
+  "description": "Movie Analytics Dashboard with Ratings and Trend Analysis",
+  "main": "vite.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/guilhermeleitao2002/movie-dashboard.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/guilhermeleitao2002/movie-dashboard/issues"
+  },
+  "homepage": "https://github.com/guilhermeleitao2002/movie-dashboard#readme"
 }
