chore(npm): update dependencies to latest versions
- upgraded react and react-dom from ^18.2.0 to ^18.3.1
- upgraded recharts from ^2.12.0 to ^2.15.3
- updated @vitejs/plugin-react from ^4.2.0 to ^4.5.0
- updated vite from ^5.0.0 to ^5.4.19

--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "recharts": "^2.12.0",
-    "lucide-react": "^0.263.1"
+    "lucide-react": "^0.263.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.0",
-    "vite": "^5.0.0"
+    "@vitejs/plugin-react": "^4.5.0",
+    "vite": "^5.4.19"
   },
   "description": "Movie Analytics Dashboard with Ratings and Trend Analysis",
   "main": "vite.config.js",
